--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,14 @@ services:
     working_dir: /var/www
     volumes:
       - ./:/var/www
-    depends_on:
-      - db
+    # Remove "depends_on: db" since you're using Supabase
+    environment:
+      DB_CONNECTION: pgsql
+      DB_HOST: aws-1-ap-southeast-1.pooler.supabase.com
+      DB_PORT: 5432
+      DB_DATABASE: postgres
+      DB_USERNAME: postgres.gosldezjommpxzmlsfig
+      DB_PASSWORD: dpEe_cZd2Uxirfu
 
   nginx:
     image: nginx:alpine
@@ -28,18 +34,3 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
-
-  db:
-    image: mysql:8.0
-    container_name: laravel_db
-    restart: unless-stopped
-    environment:
-      MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_USER: ${DB_USERNAME}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD:-rootpassword}
-    volumes:
-      - dbdata:/var/lib/mysql
-
-volumes:
-  dbdata:
