--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,27 +1,23 @@
-server {
-    listen 80;
-    index index.php index.html;
-    server_name localhost;
+worker_processes auto;
+events { worker_connections 1024; }
 
-    root /var/www/public;
+http {
+    server {
+        listen 80;
+        server_name _;
 
-    # Route all requests to index.php if not static file
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
+        root /var/www/public;
+        index index.php index.html;
 
-    # PHP processing
-    location ~ \.php$ {
-        fastcgi_pass app:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
+        location / {
+            try_files $uri $uri/ /index.php?$query_string;
+        }
 
-    # Optional: assets, etc.
-    location ~* \.(css|js|png|jpg|jpeg|gif|svg)$ {
-        expires max;
-        log_not_found off;
+        location ~ \.php$ {
+            include fastcgi_params;
+            fastcgi_pass 127.0.0.1:9000;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        }
     }
 }
