--- a/.env
+++ b/.env
@@ -21,11 +21,12 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=aws-1-ap-southeast-1.pooler.supabase.com
+DB_HOST=dpg-d3p4jht6ubrc73ao61v0-a.singapore-postgres.render.com
 DB_PORT=5432
-DB_DATABASE=postgres
-DB_USERNAME=postgres.gosldezjommpxzmlsfig
-DB_PASSWORD=v0DjHauDu6P9M20u
+DB_DATABASE=laravel_docker_db
+DB_USERNAME=laravel_docker_db_user
+DB_PASSWORD=0TYVEdd5aUWtF8g2KjQtpTz4wy4Z2rPd
+
 
 
 SESSION_DRIVER=database
